--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@jest/globals": "^30.0.5",
