--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev:uni": "VITE_SOCKET_URL=http://172.23.26.228:8080 vite"
+    "dev:uni": "VITE_SOCKET_URL=http://172.23.26.228:8080 VITE_API_BASE_URL=http://172.23.26.228:8080 vite"
   },
   "dependencies": {
     "axios": "^1.11.0",
