--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.1",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.9.1",
+    "react-use": "^17.6.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
